  partySkill_#_target_monsters
  useSelf_item_#_monsters
  Only activate useSelfSkill/partySkill/useSelf_item if a certain 
  monster attacks.
- partySkill_#_target_aggressives
  Only activate partySkill if a certain monster attacks a party member.

Bug fixes:
- The shop.txt parser now correctly handles CRLF (DOS) line endings in Linux.
- Kore can walk on walkable water now (bug #21).
- Kore now detects what directory its executable is in, and adds it to
  its include path (@INC).

Internal:
- findIndex() and related functions are now much faster (bug #16).
- writeDataFile*() won't write trailing spaces.
- Functions in Tools.dll are now called through XS, Perl's native
  C-to-Perl interface.

Credits:
- Joseph: -1 flag support in mon_control.txt
- aputs: Support for the _monsters option in useSelf_skill, useSelf_item
  and partySkill.
- obyarou: Priority attack support for non-aggressive monsters.
- fov: writeDataFile*() tweaks
- polokus: idRO Amatsu/Kunlun support
- Ven`Tatsu: walkable water bugfix (bug #21)


==================
### 1.4.0
==================

New features:
- "<name> refined weapon <success/failure>" messages from modkore added.
- New Amatsu emotions are now supported. You must download the latest
  default table files.
- If attackAuto_inLockOnly is set to 2, Kore will ignore all aggressive
  monsters while walking to lockMap.
- "<name> refined weapon <success/failure>" messages from modkore added.

Bug fixes:
- Fixed login problems with newer eAthena versions (2nd session id, bug #28)
- If attackAuto is set to 0, Kore will no longer attack all monsters
  while moving to lockMap.
- When in X-Kore mode, do not quit on payment/banned error (fix by anu).
- State changes (like Frozen) are now correctly detected again.
- Fix typo which cause lockMap_randX/Y to not work.
- The 'cart add' command now checks whether you have a cart.
- Fix some memory leaks.
- Various messages no longer spam X-Kore.
- partySkill targetTimeout is now honored.